syntax = "proto3";
option csharp_namespace = "BlazorBoilerplate.Server";

import "Enumerations.proto";
import "PredictionRelatedMessages.proto";
import "google/protobuf/timestamp.proto";


message DeleteModelRequest {
  string userId = 1;                            //Unique user id generated by the controller on the create new user request from the frontend. Linked to a AspNetUser saved within the MS Sql database of the frontend (xxxx_xxxx_xxxx_xxxx)
  string modelId = 2;                           //Unique model ids generated when inserting a new model document into MongoDB (xxxx_xxxx_xxxx_xxxx)
}

message DeleteModelResponse {
  
}

message GetModelsRequest {
  string userId = 1;                            //Unique user id generated by the controller on the create new user request from the frontend. Linked to a AspNetUser saved within the MS Sql database of the frontend (xxxx_xxxx_xxxx_xxxx)
  string datasetId = 2;                         //Unique dataset id generated when inserting a new dataset document into MongoDB (xxxx_xxxx_xxxx_xxxx)
}

message GetModelsResponse {
  repeated Model models = 1;                    //List of model objects representing Model records in MongoDB           
}

message GetModelRequest {
  string userId = 1;                            //Unique user id generated by the controller on the create new user request from the frontend. Linked to a AspNetUser saved within the MS Sql database of the frontend (xxxx_xxxx_xxxx_xxxx)
  string modelId = 2;                           //Unique model id generated when inserting a new model document into MongoDB (xxxx_xxxx_xxxx_xxxx)
}

message GetModelResponse {
  Model model = 1;                              //Model object representing one Model record in MongoDB
}

message Model {
  string id = 1;                                //Unique model id generated when inserting a new model document into MongoDB (xxxx_xxxx_xxxx_xxxx)
  string trainingId = 2;                        //Unique training id generated when inserting a new training document into MongoDB (xxxx_xxxx_xxxx_xxxx)
  repeated Prediction predictions = 3;          //List of prediction objects representing Prediction records in MongoDB made with this model
  string status = 4;                            //Current activity status of the AutoML adapter training this model (busy, completed, failed)
  string autoMlSolution = 5;                    //Ontology URI of the used AutoML Solution 
  string mlModelType = 6;                       //Ontology URI of the used ML model type
  string mlLibrary = 7;                         //Ontology URI of the used ML library
  string path = 8;                              //Absolute system path where the final model pipeline zip is located
  float testScore = 9;                          //The computed test score using the metric defined in the training record
  float predictionTime = 10;                    //Time in ms it takes on average to make on prediction with this model
  ModelruntimeProfile runtimeProfile = 11;      //The Model runtime profile object
  repeated string statusMessages = 12;          //List of status messages produced by the AutoML solution
  string explanation = 13;                      //JSON string of the explanation AI module result with paths to the generated plots and explanations
}

message ModelruntimeProfile {
  google.protobuf.Timestamp startTime = 1;      //The timestamp when the adapter search process started
  google.protobuf.Timestamp endTime = 2;        //The timestamp when the adapter search process ended
}